--- a/app/src/main/res/layout/fragment_pdf.xml
+++ b/app/src/main/res/layout/fragment_pdf.xml
@@ -1,44 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/pdf_image"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:background="@drawable/pdf_icon"
-        android:contentDescription="@string/todo"
-        android:visibility="visible" />
-
-    <LinearLayout
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_view"
+        android:layout_gravity="top"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="horizontal"
+        card_view:cardCornerRadius="4dp">
 
-        <TextView
-            android:id="@+id/pdf_name"
-            android:layout_width="match_parent"
+        <ImageView
+            android:id="@+id/pdf_image"
+            android:layout_margin="8dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_gravity="center_vertical"
+            android:background="@drawable/pdf_icon"
+            android:contentDescription="@string/todo"
+            android:visibility="visible" />
+
+
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/text_margin"
-            android:textAppearance="?attr/textAppearanceListItem" />
+            android:layout_marginLeft="100dp"
+            android:orientation="vertical"
+            android:layout_marginStart="100dp">
 
-        <TextView
-            android:id="@+id/pdf_info"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/text_margin"
-            android:textAppearance="?attr/textAppearanceListItem" />
+            <TextView
+                android:id="@+id/pdf_name_tag"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorPrimary"
+                android:text="@string/name" />
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/pdf_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/text_margin"
+                android:textAppearance="?attr/textAppearanceListItem"
+                android:textColor="@color/colorPrimary" />
 
-    <View
-        android:id="@+id/divider2"
-        android:layout_width="0dp"
-        android:layout_height="1dp"
-        android:layout_weight="1"
-        android:background="?android:attr/listDivider" />
+            <TextView
+                android:id="@+id/pdf_owner_tag"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorPrimary"
+                android:text="@string/owner" />
+
+            <TextView
+                android:id="@+id/pdf_owner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/text_margin"
+                android:layout_weight="1"
+                android:textAppearance="?attr/textAppearanceListItem"
+                android:textColor="@color/colorPrimary" />
+
+            <TextView
+                android:id="@+id/pdf_signers_tag"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/signers"
+                android:textColor="@color/colorPrimary"
+                />
+
+            <TextView
+                android:id="@+id/pdf_signers"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/text_margin"
+                android:layout_weight="1"
+                android:textAppearance="?attr/textAppearanceListItem"
+                android:textColor="@color/colorPrimary" />
+
+
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
 
 
 </LinearLayout>
