Adding icons and trying to improve look

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#1a1a1a</color>
+    <color name="colorPrimary">#aeaeae</color>
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#f0b10c</color>
-    <color name="colorBackground">#1a1a1a</color>
+    <color name="colorAccentSecundary">#7e5d00</color>
+    <color name="colorBackground">#dfdfdf</color>
     <color name="textColorPrimary">#1a1a1a</color>
-    <color name="textColor">#ffffff</color>
+    <color name="textColor">#000000</color>
     <color name="textColorPrimaryDisableOnly">#dedede</color>
     <color name="textColorHint">#6b6b6b</color>
 
