--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -6,7 +6,7 @@
         android:title="@string/pdfs_owned"></item>
     <item
         android:id="@+id/nav_to_sign"
-        android:icon="@drawable/ic_folder_black_24dp"
+        android:icon="@drawable/ic_timer_black_24dp"
         android:title="@string/pdfs_to_sign"></item>
     <item
         android:id="@+id/nav_signed"
@@ -16,5 +16,9 @@
         android:id="@+id/nav_upload_pdf"
         android:icon="@drawable/ic_file_upload_black_24dp"
         android:title="@string/upload_pdf"></item>
+    <item
+        android:id="@+id/nav_users_related"
+        android:icon="@drawable/ic_people_black_24dp"
+        android:title="@string/users_related"></item>
 
 </menu>
