--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -1,1 +1,7 @@
-<resources></resources>
+<resources>
+
+    <style name="MyEditTextStyle" parent="Widget.AppCompat.EditText">
+        <item name="android:textColor">@color/textColor</item>
+        <item name="android:colorAccent">@color/colorAccentDark</item>
+    </style>
+</resources>
