--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,10 +3,12 @@
     <color name="colorPrimary">#aeaeae</color>
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#f0b10c</color>
-    <color name="colorAccentSecundary">#7e5d00</color>
+    <color name="colorAccentLight">#ffe5a2</color>
+    <color name="colorAccentDark">#694c00</color>
     <color name="colorBackground">#dfdfdf</color>
     <color name="textColorPrimary">#1a1a1a</color>
     <color name="textColor">#000000</color>
+    <color name="textColorWhite">#ffffff</color>
     <color name="textColorPrimaryDisableOnly">#dedede</color>
     <color name="textColorHint">#6b6b6b</color>
 
