--- a/app/src/main/res/layout/fragment_pdf_upload.xml
+++ b/app/src/main/res/layout/fragment_pdf_upload.xml
@@ -34,6 +34,7 @@
             android:text="Select signers" />
 
         <ListView
+            android:id="@+id/listViewUsers"
             android:layout_width="match_parent"
             android:layout_height="200dp" >
         </ListView>
