--- a/app/src/main/res/layout/fragment_users_related.xml
+++ b/app/src/main/res/layout/fragment_users_related.xml
@@ -1,7 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@android:color/holo_blue_bright">
+    android:layout_height="match_parent">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/buttonAddUsersRelated"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Add user" />
+
+        <ListView
+            android:id="@+id/listViewUsersRelated"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerVertical="true" >
+
+        </ListView>
+
+    </LinearLayout>
 
 </RelativeLayout>
