--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#aeaeae</color>
+    <color name="colorPrimary">#f0b10c</color>
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#f0b10c</color>
-    <color name="colorAccentLight">#ffe5a2</color>
     <color name="colorAccentDark">#694c00</color>
-    <color name="colorBackground">#dfdfdf</color>
+    <color name="colorBackground">#ffffff</color>
     <color name="textColorPrimary">#1a1a1a</color>
     <color name="textColor">#000000</color>
     <color name="textColorWhite">#ffffff</color>
