--- a/app/src/main/res/layout/fragment_pdf_edit.xml
+++ b/app/src/main/res/layout/fragment_pdf_edit.xml
@@ -6,11 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/layoutPdfView"
-    tools:context=".activities.PdfVisorActivity">
+    tools:context=".activities.pdf.PdfActivity">
 
-    <com.github.barteksc.pdfviewer.PDFView
-        android:id="@+id/pdfView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
 
 </RelativeLayout>
