I have already an UI skeleton

--- a/app/src/main/res/layout/fragment_pdf_edit.xml
+++ b/app/src/main/res/layout/fragment_pdf_edit.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/layoutPdfView"
-    tools:context=".activities.pdf.PdfActivity">
+    tools:context=".activities.pdf.PdfActivity"
+    android:background="@color/colorAccentDark">
 
 
 </RelativeLayout>
