--- a/app/src/main/res/layout/fragment_pdf_sign.xml
+++ b/app/src/main/res/layout/fragment_pdf_sign.xml
@@ -9,5 +9,21 @@
     tools:context=".activities.pdf.PdfActivity">
 
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
+        <ListView
+            android:id="@+id/listCerts"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <Button
+            android:id="@+id/buttonSignPdf"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Sign PDF" />
+
+    </LinearLayout>
 </RelativeLayout>
