--- a/app/src/main/res/layout/signer_item.xml
+++ b/app/src/main/res/layout/signer_item.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textViewUserEmail"
+        android:id="@+id/textViewCert"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
@@ -18,14 +18,14 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textViewUserName"
+        android:id="@+id/textViewCertDes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:text="TextView"
         app:layout_constraintStart_toEndOf="@+id/imageIsSigned"
-        app:layout_constraintTop_toBottomOf="@+id/textViewUserEmail" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewCert" />
 
     <TextView
         android:id="@+id/textViewUserLastname"
@@ -34,19 +34,19 @@
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:text="TextView"
-        app:layout_constraintStart_toEndOf="@+id/textViewUserName"
-        app:layout_constraintTop_toBottomOf="@+id/textViewUserEmail" />
+        app:layout_constraintStart_toEndOf="@+id/textViewCertDes"
+        app:layout_constraintTop_toBottomOf="@+id/textViewCert" />
 
     <ImageView
         android:id="@+id/imageIsSigned"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@+id/imageViewUser"
-        app:layout_constraintTop_toBottomOf="@+id/textViewUserEmail"
+        app:layout_constraintStart_toEndOf="@+id/imageCert"
+        app:layout_constraintTop_toBottomOf="@+id/textViewCert"
         app:srcCompat="@drawable/ic_timer_black_24dp" />
 
     <ImageView
-        android:id="@+id/imageViewUser"
+        android:id="@+id/imageCert"
         android:layout_width="50dp"
         android:layout_height="50dp"
         app:srcCompat="@drawable/ic_account_circle_black_24dp"
