--- a/app/src/main/res/layout/content_navigation.xml
+++ b/app/src/main/res/layout/content_navigation.xml
@@ -8,4 +8,10 @@
     tools:context=".activities.NavigationActivity"
     tools:showIn="@layout/app_bar_navigation">
 
+    <FrameLayout
+        android:id="@+id/fragment_container_main"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/bottom_navigation"></FrameLayout>
+
 </android.support.constraint.ConstraintLayout>
