--- a/app/src/main/res/layout/fragment_pdf_sign.xml
+++ b/app/src/main/res/layout/fragment_pdf_sign.xml
@@ -14,10 +14,39 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <ListView
-            android:id="@+id/listCerts"
+        <!--<ListView-->
+            <!--android:id="@+id/listCerts"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent" />-->
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/textInputLayoutPass"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="wrap_content"
+            app:passwordToggleEnabled="true">
+
+            <EditText
+                android:id="@+id/editTextPass"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="@string/password"
+                android:inputType="textPassword" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <TextView
+            android:id="@+id/textViewSelectCertId"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Select Certificate" />
+
+        <RadioGroup
+            android:id="@+id/radioGroupCerts"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        </RadioGroup>
 
         <Button
             android:id="@+id/buttonSignPdf"
