--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <style name="MyButtonStyle" parent="Widget.AppCompat.Button.Colored">
         <item name="android:textColor">@color/textColor</item>
@@ -11,34 +11,10 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="android:windowBackground">@color/colorBackground</item>
-        <item name="android:colorBackground">@color/colorPrimary</item>
-        <item name="android:panelFullBackground">@color/colorBackground</item>
-        <item name="android:panelBackground">@color/colorBackground</item>
-        <item name="android:panelColorBackground">@color/colorBackground</item>
-        <item name="android:popupBackground">@color/colorBackground</item>
-        <!--<item name="android:colorBackgroundFloating">@color/colorBackground</item>-->
-        <!--<item name="android:windowBackground">@color/colorBackground</item>-->
-        <item name="android:actionMenuTextColor">@color/colorBackground</item>
-
 
         <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccentDark</item>
-        <item name="colorButtonNormal">@color/colorAccent</item>
-        <item name="editTextColor">@color/textColor</item>
-
-        <item name="android:textColorPrimaryDisableOnly">@color/textColorPrimaryDisableOnly</item>
-        <item name="android:textColorHint">@color/textColor</item>
-        <item name="android:windowActionBar">@color/colorAccentDark</item>
-        <item name="android:textColor">@color/textColor</item>
-        <item name="colorControlNormal">@color/textColor</item>
-
-
-        <!-- API 23 -->
-        <!--<item name="android:titleTextColor">@color/colorAccent</item>-->
-        <!--<item name="android:subtitleTextColor">@color/textColor</item>-->
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textColorHighlight">@color/colorAccent</item>
 
         <!-- styles -->
         <item name="buttonStyle">@style/MyButtonStyle</item>
