--- a/app/src/main/res/layouts/certs_layouts/layout/cert_item.xml
+++ b/app/src/main/res/layouts/certs_layouts/layout/cert_item.xml
@@ -6,61 +6,176 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textViewCert"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="12dp"
-        android:text="TextView"
-        android:textSize="18sp"
-        app:layout_constraintStart_toEndOf="@+id/imageCert"
-        app:layout_constraintTop_toTopOf="parent" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textViewUserId"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        android:visibility="invisible" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/textViewCertDes"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
-        android:text="TextView"
-        app:layout_constraintStart_toEndOf="@+id/imageCert"
-        app:layout_constraintTop_toTopOf="@+id/guideline10" />
+            <TextView
+                android:id="@+id/textViewEncodedTag"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Encoded"
+                android:textColor="@color/colorAccent"
+                android:textSize="8sp"
+                android:typeface="monospace" />
 
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="33dp" />
+            <TextView
+                android:id="@+id/textViewEncodedValue"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                android:textSize="8sp"
+                android:typeface="monospace" />
 
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline11"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="66dp" />
+        </LinearLayout>
 
-    <ImageView
-        android:id="@+id/imageCert"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/guideline11"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_certificate_box" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textViewFormatTag"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Format"
+                android:textColor="@color/colorAccent"
+                android:textSize="8sp"
+                android:typeface="monospace" />
+
+            <TextView
+                android:id="@+id/textViewFormatValue"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                android:textSize="8sp"
+                android:typeface="monospace" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textViewAlgTag"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Algorithm"
+                android:textColor="@color/colorAccent"
+                android:textSize="8sp"
+                android:typeface="monospace" />
+
+            <TextView
+                android:id="@+id/textViewAlgValue"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="TextView"
+                android:textSize="8sp"
+                android:typeface="monospace" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textViewTypeTag"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Type"
+                android:textColor="@color/colorAccent"
+                android:textSize="8sp"
+                android:typeface="monospace" />
+
+            <TextView
+                android:id="@+id/textViewTypeValue"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="TextView"
+                android:textSize="8sp"
+                android:typeface="monospace" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textViewDetailsTag"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Details"
+                android:textColor="@color/colorAccent"
+                android:textSize="8sp"
+                android:typeface="monospace"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/textViewDetailsValue"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="TextView"
+                android:textSize="8sp"
+                android:typeface="monospace"
+                app:layout_constraintStart_toEndOf="@+id/textViewDetailsTag"
+                app:layout_constraintTop_toTopOf="parent" />
+        </LinearLayout>
+
+        <!--<TextView-->
+        <!--android:id="@+id/textViewTSATag"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:text="TSA"-->
+        <!--android:textColor="@color/colorAccent"-->
+        <!--app:layout_constraintStart_toStartOf="parent" />-->
+
+        <!--<TextView-->
+        <!--android:id="@+id/textViewTSAValue"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="TextView"-->
+        <!--app:layout_constraintStart_toEndOf="@+id/textViewTSATag" />-->
+
+        <!--<TextView-->
+        <!--android:id="@+id/textViewCATag"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="CA"-->
+        <!--android:textColor="@color/colorAccent"-->
+        <!--app:layout_constraintStart_toStartOf="parent" />-->
+
+        <!--<TextView-->
+        <!--android:id="@+id/textViewCAValue"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="TextView"-->
+        <!--app:layout_constraintStart_toEndOf="@+id/textViewCATag" />-->
+
+        <!--<TextView-->
+        <!--android:id="@+id/textViewCertVersionTag"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="Version"-->
+        <!--android:textColor="@color/colorAccent" />-->
+
+        <!--<TextView-->
+        <!--android:id="@+id/textViewCertVersionValue"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="TextView"-->
+        <!--app:layout_constraintStart_toEndOf="@+id/textViewCAValue" />-->
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
