--- a/app/src/main/res/layouts/main_layouts/layout/fragment_pdf_container.xml
+++ b/app/src/main/res/layouts/main_layouts/layout/fragment_pdf_container.xml
@@ -13,7 +13,6 @@
         android:layout_height="match_parent"
         android:layout_above="@id/bottom_navigation"></FrameLayout>
 
-
     <!--<android.support.design.widget.BottomNavigationView-->
     <!--android:id="@+id/bottom_navigation"-->
     <!--android:layout_width="match_parent"-->
@@ -26,8 +25,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:layout_alignParentBottom="true"
-        app:menu="@menu/bottom_navigation_main" />
-
-
+        android:layout_alignParentBottom="true"/>
 </RelativeLayout>
