--- a/app/src/main/res/layouts/main_layouts/layout/pdf_item.xml
+++ b/app/src/main/res/layouts/main_layouts/layout/pdf_item.xml
@@ -52,7 +52,7 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/textViewCertCreationDateTag"
+                        android:id="@+id/textViewDetailsTag"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentTop="true"
@@ -69,7 +69,7 @@
                         android:layout_alignParentTop="true"
                         android:layout_margin="4dp"
                         android:text="TextView"
-                        app:layout_constraintStart_toEndOf="@+id/textViewCertCreationDateTag"
+                        app:layout_constraintStart_toEndOf="@+id/textViewDetailsTag"
                         app:layout_constraintTop_toTopOf="parent" />
 
                 </LinearLayout>
@@ -83,7 +83,7 @@
                         android:id="@+id/textViewTSATag"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/textViewCertCreationDateTag"
+                        android:layout_below="@+id/textViewDetailsTag"
                         android:layout_margin="4dp"
                         android:text="Owner"
                         android:textColor="@color/colorAccent"
@@ -94,7 +94,7 @@
                         android:id="@+id/textViewOwnerNameValue"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/textViewCertCreationDateTag"
+                        android:layout_below="@+id/textViewDetailsTag"
                         android:layout_marginBottom="4dp"
                         android:layout_marginEnd="4dp"
                         android:layout_marginLeft="4dp"
