--- a/app/src/main/res/layouts/pdf_layouts/layout/fragment_pdf_info.xml
+++ b/app/src/main/res/layouts/pdf_layouts/layout/fragment_pdf_info.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/fragmentPdfInfo"
-    tools:context=".activities.PdfVisorActivity">
+    tools:context=".activities.pdf.PdfActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,7 +14,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/textViewCertCreationDateTag"
+            android:id="@+id/textViewPdfIdTag"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
@@ -31,11 +31,11 @@
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
             android:text="TextView"
-            app:layout_constraintStart_toEndOf="@+id/textViewCertCreationDateTag"
+            app:layout_constraintStart_toEndOf="@+id/textViewDetailsTag"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textViewCertCreationDateTag"
+            android:id="@+id/textViewDetailsTag"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
@@ -51,7 +51,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
             android:text="TextView"
-            app:layout_constraintStart_toEndOf="@+id/textViewCertCreationDateTag" />
+            app:layout_constraintStart_toEndOf="@+id/textViewDetailsTag" />
 
         <TextView
             android:id="@+id/textViewTSATag"
