--- a/app/src/main/res/layouts/pdf_layouts/layout/fragment_pdf_sign.xml
+++ b/app/src/main/res/layouts/pdf_layouts/layout/fragment_pdf_sign.xml
@@ -19,6 +19,18 @@
             <!--android:layout_width="match_parent"-->
             <!--android:layout_height="match_parent" />-->
 
+        <TextView
+            android:id="@+id/textViewWarning"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Warning: you are bloquing this PDF" />
+
+        <TextView
+            android:id="@+id/textViewTime"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="You have 1 minute to sign this PDF since you open this view" />
+
         <android.support.design.widget.TextInputLayout
             android:id="@+id/textInputLayoutPass"
             android:layout_width="match_parent"
@@ -55,5 +67,11 @@
             android:layout_height="wrap_content"
             android:text="Sign PDF" />
 
+        <com.github.barteksc.pdfviewer.PDFView
+            android:id="@+id/pdfView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
     </LinearLayout>
+
 </RelativeLayout>
