--- a/app/src/main/res/layouts/user_layouts/layout/fragment_user_info.xml
+++ b/app/src/main/res/layouts/user_layouts/layout/fragment_user_info.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/fragmentPdfInfo"
+    android:id="@+id/fragmentUserInfo"
     tools:context=".activities.NavigationActivity">
 
     <LinearLayout
@@ -31,11 +31,11 @@
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
             android:text="TextView"
-            app:layout_constraintStart_toEndOf="@+id/textViewCertCreationDateTag"
+            app:layout_constraintStart_toEndOf="@+id/textViewDetailsTag"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textViewCertCreationDateTag"
+            android:id="@+id/textViewDetailsTag"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
@@ -52,11 +52,11 @@
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
             android:text="TextView"
-            app:layout_constraintStart_toEndOf="@+id/textViewCertCreationDateTag"
+            app:layout_constraintStart_toEndOf="@+id/textViewDetailsTag"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textViewCertCreationDateTag"
+            android:id="@+id/textViewDetailsTag"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
@@ -72,7 +72,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
             android:text="TextView"
-            app:layout_constraintStart_toEndOf="@+id/textViewCertCreationDateTag" />
+            app:layout_constraintStart_toEndOf="@+id/textViewDetailsTag" />
 
         <TextView
             android:id="@+id/textViewTSATag"
